Ajout de la table

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <main></main>
+    <main>
+      <h1>Habit tracker</h1>
+      <input type="text" name="Habit" id="habit" placeholder="Votre habitude" />
+      <table>
+        <thead id="tableDay">
+          <th></th>
+          <th>Lun</th>
+          <th>Mar</th>
+          <th>Mer</th>
+          <th>Jeu</th>
+          <th>Ven</th>
+          <th>Sam</th>
+          <th>Dim</th>
+        </thead>
+        <tbody id="tableHabit"></tbody>
+      </table>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
